Stat System refactoring